@@ -29,7 +29,7 @@
         <var:foreach list="contactInfos" item="currentContact">
           <tr class="tableview"
             var:id="currentContact.c_name"
-            var:contactname="displayName"
+            var:contactname="currentContact.displayName"
             var:contactid="currentContact.c_uid"
             onclick="return onContactRowClick(event, this);"
             ondblclick="return onContactRowDblClick(event, this);"
